tests/snapshots/motion_edge_cases_test__10j.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 12

Buffer:
line 0
[l]ine 1
line 2
line 3
line 4
line 5
line 6
line 7
line 8
line 9
line 10
line 11
