tests/snapshots/motion_edge_cases_test__3e.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
one two thre[e] four five
