tests/snapshots/motion_edge_cases_test__4b.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:8
Lines: 1

Buffer:
one two [t]hree four five six
