tests/snapshots/motion_edge_cases_test__5w.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:24
Lines: 1

Buffer:
one two three four five [s]ix seven
