tests/snapshots/motion_edge_cases_test__G_on_last_line.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 2

Buffer:
line 1
[l]ine 2
