tests/snapshots/motion_edge_cases_test__b_vs_B_punctuation.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:12
Lines: 1

Buffer:
hello.world [t]est
