tests/snapshots/motion_edge_cases_test__closing_paren_from_middle.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:9
Lines: 1

Buffer:
func(arg1[,] arg2)
