tests/snapshots/motion_edge_cases_test__closing_paren_nested.snap
---
source: tests/motion_edge_cases_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[o]uter(inner(deep))
